Fixed scroll spacing on mobile viewports

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -31,6 +31,10 @@ header {
   header {
       background-attachment: scroll;
   }
+
+  .jumbo-section{
+    padding-top: 40%;
+  }
 }
 
 footer {
